--- a/mainpage.html
+++ b/mainpage.html
@@ -1,1 +1,12 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>Microwave Hunt</title>
+</head>
+<body>
 
+<h1>Microwaves at UA</h1>
+<p>This website has a list of microwaves at UA.</p>
+
+</body>
+</html>
