--- a/mainpage.html
+++ b/mainpage.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
+
 <html>
 <head>
 <title>Microwave Hunt</title>
@@ -6,6 +8,7 @@
 <body>
 
 <h1>Microwaves at UA</h1>
+<img src="darcy.png" alt="Map Picture" style="width:1166px;height:744px;">
 <p>This website has a list of microwaves at UA.</p>
 
 </body>
