--- a/mainpage.html
+++ b/mainpage.html
@@ -2,13 +2,26 @@
 <!DOCTYPE html>
 
 <html>
-<head>
-<title>Microwave Hunt</title>
-</head>
-<body>
+    <head>
+        <title>Microwave Hunt</title>
+    </head>
+    <body>
 
-<h1>Microwaves at UA</h1>
-<img src="darcy.png" alt="Map Picture" style="width:583px;height:372px;">
+        <h1>Microwaves at UA</h1>
+        <div style="float:left; width:80%;">
+            <ul>
+                <img src="darcy.png" alt="Map Picture" width="70%" height="30%"/>
+            </ul>
+        </div>
 
-</body>
+        <div style="float:right; width:20%;">
+            <ul>
+                <li>Microwave 1</li>
+                <li>Microwave 2</li>
+                <li>Microwave 3</li>
+            </ul>
+        </div>
+        
+
+    </body>
 </html>
