adding input fields

--- a/mainpage.html
+++ b/mainpage.html
@@ -22,6 +22,15 @@
             </ul>
         </div>
         
+        <form action="/action_page.php">
+            Building:<br>
+            <input type="text" name="building"><br>
+            Room Number:<br>
+            <input type="text" name="roomNum"><br>
+            Additional Info:<br>
+            <input type="text" name="additionalInfo"><br><br>
+            <input type="submit" value="Submit">
+        </form>
 
     </body>
 </html>
