moving the text fields

--- a/mainpage.html
+++ b/mainpage.html
@@ -14,22 +14,24 @@
             </ul>
         </div>
 
-        <form action="/action_page.php">
-            Building:<br>
-            <input type="text" name="building"><br>
-            Room Number:<br>
-            <input type="text" name="roomNum"><br>
-            Additional Info:<br>
-            <input type="text" name="additionalInfo"><br><br>
-            <input type="submit" value="Submit">
-        </form>
-
         <div style="float:right; width:30%;">
             <ul>
                 <li>Microwave 1</li>
                 <li>Microwave 2</li>
                 <li>Microwave 3</li>
             </ul>
+        </div>
+
+        <div style="float:left; width:100%;">
+            <form action="/action_page.php">
+                Building:<br>
+                <input type="text" name="building"><br>
+                Room Number:<br>
+                <input type="text" name="roomNum"><br>
+                Additional Info:<br>
+                <input type="text" name="additionalInfo"><br><br>
+                <input type="submit" value="Submit">
+            </form>
         </div>
 
     </body>
