--- a/mainpage.html
+++ b/mainpage.html
@@ -23,14 +23,16 @@
         </div>
 
         <div style="float:left; width:100%;">
-            <form action="/action_page.php">
-                Building:<br>
-                <input type="text" name="building"><br>
-                Room Number:<br>
-                <input type="text" name="roomNum"><br>
-                Additional Info:<br>
-                <input type="text" name="additionalInfo"><br><br>
-                <input type="submit" value="Submit">
+            <form action="/action_page.php" method="get">
+                <fieldset>
+                    Building:<br>
+                    <input type="text" name="building" method="get"><br>
+                    Room Number:<br>
+                    <input type="text" name="roomNum" method="get"><br>
+                    Additional Info:<br>
+                    <input type="text" name="additionalInfo"><br><br>
+                    <input type="submit" value="Submit">
+                </fieldset>
             </form>
         </div>
 
