--- a/mainpage.html
+++ b/mainpage.html
@@ -25,6 +25,7 @@
         <div style="float:left; width:100%;">
             <form action="/action_page.php" method="get">
                 <fieldset>
+                    <legend>Found a public microwave? Submit here:</legend>
                     Building:<br>
                     <input type="text" name="building" method="get"><br>
                     Room Number:<br>
@@ -34,6 +35,7 @@
                     <input type="submit" value="Submit">
                 </fieldset>
             </form>
+            <br>
         </div>
 
     </body>
