changed field text

--- a/mainpage.html
+++ b/mainpage.html
@@ -25,7 +25,7 @@
         <div style="float:left; width:100%;">
             <form action="/action_page.php" method="get">
                 <fieldset>
-                    <legend>Found a public microwave? Submit here:</legend>
+                    <legend>Found a public microwave? Add it here:</legend>
                     Building:<br>
                     <input type="text" name="building" method="get"><br>
                     Room Number:<br>
