--- a/mainpage.html
+++ b/mainpage.html
@@ -8,18 +8,21 @@
     <body>
 
         <h1>Microwaves at UA</h1>
-        <div style="float:left; width:70%;">
+        <div style="float:left; width:60%;">
             <ul>
-                <img src="darcy.png" alt="Map Picture" width="70%" height="30%"/>
+                <img src="darcy.png" alt="Map Picture" width="100%" height="45%"/>
             </ul>
         </div>
-
-        <div style="float:right; width:30%;">
-            <ul>
-                <li>Microwave 1</li>
-                <li>Microwave 2</li>
-                <li>Microwave 3</li>
-            </ul>
+        
+        <div style="float:right; width:40%;">
+            <fieldset>
+                    <legend>Microwaves:</legend>
+                <ul>
+                    <li>Microwave 1</li>
+                    <li>Microwave 2</li>
+                    <li>Microwave 3</li>
+                </ul>
+            </fieldset>
         </div>
 
         <div style="float:left; width:100%;">
