linked the microwaves files together

--- a/microwaves.html
+++ b/microwaves.html
@@ -1,3 +1,15 @@
+<!DOCTYPE html>
+<html lang"en">
+  <head>
+    
+    <title>MicroWaze</title>
+    <link rel="stylesheet" type="text/css" href="microwaves.css" />
+    <script src="microwaves.js"></script>
+    
+  </head>
+  <body>
+
+
 <div id="map" height="460px" width="100%"></div>
     <div id="form">
       <table>
@@ -9,5 +21,9 @@
     <div id="message">Location saved</div>
 <!-- Replace the value of the key parameter with your own API key. -->
 <script async defer
-src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCkUOdZ5y7hMm0yrcCQoCvLwzdM6M8s5qk&callback=initMap">
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyArvMYe7pZXiaf76UnA8DDGr-sqs8tiQtI&callback=initMap">
 </script>
+
+
+  </body>
+</html>
