--- a/microwaves.html
+++ b/microwaves.html
@@ -19,7 +19,8 @@
       </table>
     </div>
     <div id="message">Location saved</div>
-<!-- Replace the value of the key parameter with your own API key. -->
+    
+<!-- use our working API Key. -->
 <script async defer
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyArvMYe7pZXiaf76UnA8DDGr-sqs8tiQtI&callback=initMap">
 </script>
