--- a/microwaves.html
+++ b/microwaves.html
@@ -7,15 +7,16 @@
   </head>
   
   <body>
+    <h1>Microwaves at UA</h1>
     <div id="map" height="460px" width="100%"></div>
-        <div id="form">
-          <table>
-          <tr><td>Name:</td> <td><input type='text' id='name'/> </td> </tr>
-          <tr><td>Notes:</td> <td><input type='text' id='notes'/> </td> </tr>
-                <tr><td></td><td><input type='button' value='Save' onclick='saveData()'/></td></tr>
-          </table>
-        </div>
-        <div id="message">Location saved</div>
+    <div id="form">
+      <table>
+      <tr><td>Name:</td> <td><input type='text' id='name'/> </td> </tr>
+      <tr><td>Notes:</td> <td><input type='text' id='notes'/> </td> </tr>
+            <tr><td></td><td><input type='button' value='Save' onclick='saveData()'/></td></tr>
+      </table>
+    </div>
+    <div id="message">Location saved</div>
         
     <!-- use our working API Key. -->
     <script async defer
