--- a/microwaves.html
+++ b/microwaves.html
@@ -4,6 +4,7 @@
     <title>MicroWaze</title>
     <link rel="stylesheet" type="text/css" href="microwaves.css" />
     <script src="microwaves.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   </head>
   
   <body>
