change font to center

--- a/microwaves.html
+++ b/microwaves.html
@@ -8,7 +8,8 @@
   </head>
   
   <body>
-    <h1>Microwaves at UA</h1>
+
+    <h1 style="text-align:center;">Microwaves at UA</h1>
     <div id="map" height="460px" width="100%"></div>
         
     <!-- use our working API Key. -->
