--- a/microwaves.html
+++ b/microwaves.html
@@ -9,7 +9,7 @@
   
   <body>
 
-    <h1 style="text-align:center;">Microwaves at UA</h1>
+    <h1 style="text-align:center;">MicroWaze</h1>
     <div id="map" height="460px" width="100%"></div>
         
     <!-- use our working API Key. -->
