--- a/microwaves.html
+++ b/microwaves.html
@@ -10,6 +10,7 @@
   <body>
 
     <h1 style="text-align:center;">MicroWaze</h1>
+    <h2 style="text-align:center;">Put your microwave on the map!</h2>
     <div id="map" height="460px" width="100%"></div>
         
     <!-- use our working API Key. -->
